gaps fix

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -245,7 +245,7 @@
   z-index: 201;
 
   @media (max-width: 640px) {
-    min-height: 80vh;
+    min-height: 100vh;
   }
 }
 
